docs/grammar.txt
program =
  | stmt* EOF
  ;

stmt =
  | print_stmt
  | var_stmt
  ;

print_stmt =
  | "print" expr ";"
  ;

var_stmt =
  | "var" ident "=" expr ";"
  ;

expr =
  | add_expr
  ;

add_expr =
  | mul_expr ( ( "+" | "-" ) mul_expr )*
  ;

mul_expr =
  | prim_expr ( ( "*" | "/" | "%" ) prim_expr )*
  ;

prim_expr =
  | integer
  | ident
  ;
